@@ -47,12 +47,12 @@ from prompt_toolkit.layout.processors import (
     ConditionalProcessor
 )
 from prompt_toolkit.key_binding.manager import KeyBindingManager
-from prompt_toolkit.keys import Keys
 from prompt_toolkit.shortcuts import (create_output,
                                       create_eventloop)
 
 from .commands import Command
 from .layout import create_layout
+from .keybinding import bind_keys
 
 MAX_HISTORY_LENGTH = 10000
 
@@ -274,32 +274,6 @@ def create_buffer(cmd, history_file):
     buffer.complete_while_typing = lambda cli=None: cmd.should_autocomplete()
     return buffer
 
-
-def _bind_keys(registry):
-
-    def _is_start_of_multiline(cli):
-        doc = cli.current_buffer.document
-        word = doc.get_word_before_cursor()
-        return doc.text and not word
-
-    @registry.add_binding(Keys.Tab, filter=Condition(_is_start_of_multiline))
-    def _(event):
-        event.cli.current_buffer.insert_text('    ')
-
-    def _bs_should_deindent(cli):
-        doc = cli.current_buffer.document
-        start_of_line_pos = doc.get_start_of_line_position()
-        return (
-            not doc.get_word_before_cursor() and
-            start_of_line_pos != 0 and
-            start_of_line_pos % 4 == 0
-        )
-
-    @registry.add_binding(Keys.Backspace, filter=Condition(_bs_should_deindent))
-    def _(event):
-        event.cli.current_buffer.delete_before_cursor(4)
-
-
 def _get_toolbar_tokens(is_conn_available, username, active_servers):
         tokens = []
         if is_conn_available():
@@ -327,7 +301,7 @@ def loop(cmd, history_file):
         enable_system_bindings=True,
         enable_open_in_editor=True
     )
-    _bind_keys(key_binding_manager.registry)
+    bind_keys(key_binding_manager.registry)
     layout = create_layout(
         message=u'cr> ',
         multiline=True,
